--- a/package.json
+++ b/package.json
@@ -11,14 +11,31 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.0.0",
+    "@angular/cdk": "^15.0.0",
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
     "@angular/forms": "^15.0.0",
+    "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@nebular/eva-icons": "11.0.1",
+    "@nebular/theme": "^11.0.1",
+    "angular-resizable-element": "^7.0.2",
+    "apexcharts": "^3.49.0",
+    "bootstrap": "^5.3.3",
+    "docx": "^8.5.0",
+    "echarts": "^5.5.0",
+    "eva-icons": "^1.1.3",
+    "file-saver": "^2.0.5",
+    "html-docx-js": "^0.3.1",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.1",
+    "jspdf": "^2.5.1",
+    "ngx-sortablejs": "^11.1.0",
     "rxjs": "~7.5.0",
+    "sortablejs": "^1.15.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
@@ -26,7 +43,10 @@
     "@angular-devkit/build-angular": "^15.0.4",
     "@angular/cli": "~15.0.4",
     "@angular/compiler-cli": "^15.0.0",
+    "@schematics/angular": "~15.0.4",
     "@types/jasmine": "~4.3.0",
+    "@types/jspdf": "^2.0.0",
+    "@types/sortablejs": "^1.15.8",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
